# macro-api

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
api/: __init__.py  config.py  main.py
api/core/: __init__.py  exceptions.py  security.py  session.py  websocket.py
api/models/: __init__.py  enums.py  schemas.py
api/routers/: __init__.py  auth.py  jobs.py  reservations.py  settings.py  trains.py
api/services/: __init__.py  job_service.py  notification_service.py  rail_service.py
docs/plans/: PLAN_srtgo-compatibility.md
srtgo/: ktx.py  srt.py  srtgo.py
srtgo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
